# Dokku-API

./: .cz.json  .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  __init__.py  commands  config  docker-compose.yml  help  plugin.toml  pyproject.toml
.github/: pull_request_template.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  pr.yml
integration_test/: Dockerfile  build.sh  docker-compose.yml  test_app.py
integration_test/scripts/: configure-env.sh  run.sh
src/: __main__.py  config.py
src/api/: app.py  config.py
src/api/commands/: __init__.py  apps.py  config.py  databases.py  domains.py  git.py  letsencrypt.py  networks.py  plugins.py
src/api/middleware/: __init__.py  rate_limiter.py  session.py
src/api/middlewares/: __init__.py  session.py
src/api/models/: __init__.py  base.py  command_history.py  models.py  schema.py  session.py  shared_app.py  tools.py  user.py
src/api/router/: api.py  apps.py  config.py  databases.py  deploy.py  domains.py  git.py  letsencrypt.py  networks.py  plugins.py  quota.py  router.py  search.py  upload.py  users.py
src/api/router/admin/: api.py  apps.py  letsencrypt.py  plugins.py  resources.py  router.py  users.py
src/api/routers/: __init__.py  apps.py  config.py  cron.py  databases.py  git.py  letsencrypt.py  networks.py  nginx.py  router.py  search.py  ssh.py  upload.py
src/api/routers/admin/: __init__.py  acl.py  api.py  apps.py  resources.py  router.py  users.py
src/api/schemas/: user.py
src/api/services/: __init__.py  acl.py  apps.py  config.py  cron.py  databases.py  domains.py  git.py  letsencrypt.py  networks.py  nginx.py  ssh.py
src/api/tools/: __init__.py  name.py  resource.py  ssh.py  token.py  validator.py
src/integration_test/: __main__.py  build.sh
src/system_test/: build.sh
src/system_tests/: __main__.py  build.sh  context.py  helpers.py  runner.py
src/system_tests/steps/: admin.py  apps.py  base.py  cleanup.py  databases.py  misc.py  networks.py
src/tests/: test_api.py
src/tests/mock/: __init__.py  database.py
src/tests/test_middleware/: test_rate_limiter.py  test_session.py
src/tests/test_models/: test_models.py
src/tests/test_tools/: test_name.py
subcommands/: default  destroy  start  stop
