[tool.poetry]
name = "dokku-api"
version = "1.0.0"
description = ""
authors = ["JeanExtreme002 <jeangamerextreme@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "0.19.2"
fastapi = "0.75.0"
pydantic = "1.10"
paramiko = "2.10.1"
python-decouple = "3.6"
anyio = "3.5.0"
asgiref = "3.5.0"
bcrypt = "3.2.0"
cffi = "1.15.0"
click = "8.0.4"
colorama = "0.4.4"
cryptography = "36.0.1"
h11 = "0.13.0"
httptools = "0.6.4"
idna = "3.3"
pycparser = "2.21"
PyNaCl = "1.5.0"
python-multipart = "0.0.5"
PyYAML = "6.0"
six = "1.16.0"
sniffio = "1.2.0"
starlette = "0.17.1"
typing_extensions = "4.6.0"
uvicorn = "0.17.5"
watchgod = "0.7"
websockets = "10.2"
requests = "^2.32.3"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.41"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
isort = "^6.0.1"
coverage = "^7.6.4"
yapf = "^0.43.0"
black = "^25.1.0"
commitizen = "^4.8.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 88
split_before_logical_operator = true
dedent_closing_brackets = true
coalesce_brackets = true
